syntax = "proto3";

option csharp_namespace = "GRPCService";

service SumService {
  rpc AddNumbers (SumRequest) returns (SumResponse);
}

message SumRequest {
  int32 number1 = 1;
  int32 number2 = 2;
}

message SumResponse {
  bool result = 1;
}